--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ a {
 }
 .header .nav ul li {
   display: inline-block;
-  margin: left;
+  margin: 0 15px;
 }
 .header .nav ul li a {
   color: white;
